# stroke-prediction

./: .pdm-python  1_data_cleaning.ipynb  2_modeling.ipynb  README.md  notebook.ipynb  pyproject.toml  requirements.txt  service.py  training.py
.trunk/: trunk.yaml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
